# dumpCB

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml  requirements.txt  run_app.py
app/: __init__.py
app/config/: constants.py
app/core/: file_processor.py  formatter.py  ignore_handler.py  main_processor.py
app/services/: context_service.py  mtime_cache.py  thread_pool.py
app/ui/: __init__.py  errors.py  frameless_window_mixin.py  qt_main_window.py  status_bus.py  style.qss  workers.py
app/ui/components/: action_panel.py  file_list_view.py  folder_selector.py  status_bar.py  title_bar.py
app/ui/controllers/: file_selection_controller.py  output_controller.py
app/ui/presenters/: window_presenter.py
app/ui/utils/: window_geometry_helper.py
app/ui/windows/: main_window.py
app/utils/: binary_detection.py  file_utils.py  token_estimator.py
assets/: resources.qrc  resources_rc.py  style.qss
docs/: ARCHITECTURE.md
tests/: conftest.py  test_token_estimator.py
